reference/ass1/initial/src/main/mp/parser/gen/MPParser.py
# Generated from /home/viet/Courses/PPL/assignment1/ass1/initial/src/main/mp/parser/MP.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':='", "'+'", "'-'", "'*'", "'/'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'<>'", "'='", 
                     "'<'", "'>'", "'<='", "'>='", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "':'", "';'", "'..'", "','" ]

    symbolicNames = [ "<INVALID>", "VAR", "BREAK", "CONTINUE", "FOR", "WITH", 
                      "TO", "DOWNTO", "DO", "IF", "THEN", "ELSE", "RETURN", 
                      "WHILE", "BEGIN", "END", "FUNCTION", "PROCEDURE", 
                      "ARRAY", "OF", "REALTYPE", "BOOLTYPE", "INTTYPE", 
                      "STRINGTYPE", "ASSIGN", "ADDOP", "SUBOP", "MULOP", 
                      "SDIVOP", "DIVOP", "MODOP", "NOTOP", "OROP", "ANDOP", 
                      "NOTEQUALOP", "EQUALOP", "LESSOP", "GREATEROP", "LEOREQUOP", 
                      "GROREQUOP", "LB", "RB", "LP", "RP", "LSB", "RSB", 
                      "COLON", "SEMI", "DDOT", "COMMA", "WS", "ID", "INTLIT", 
                      "REALLIT", "STRINGLIT", "BOOLLIT", "TRADITIONALblockCOMMENT", 
                      "BLOCKCOMMENT", "LINECOMMENT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_vardeclaration = 1
    RULE_vardeclarationlist = 2
    RULE_parameter = 3
    RULE_singletype = 4
    RULE_arraytype = 5
    RULE_funcdeclaration = 6
    RULE_procdeclaration = 7
    RULE_statementpart = 8
    RULE_assignstatement = 9
    RULE_ifstatement = 10
    RULE_whilestatement = 11
    RULE_forstatement = 12
    RULE_breakstatement = 13
    RULE_continuestatement = 14
    RULE_returnstatement = 15
    RULE_compoundstatement = 16
    RULE_withstatement = 17
    RULE_callstatement = 18
    RULE_expressions = 19
    RULE_exp0 = 20
    RULE_exp1 = 21
    RULE_exp2 = 22
    RULE_exp3 = 23
    RULE_exp4 = 24
    RULE_exp5 = 25
    RULE_exp6 = 26
    RULE_operand = 27
    RULE_funccall = 28
    RULE_arrayindex = 29

    ruleNames =  [ "program", "vardeclaration", "vardeclarationlist", "parameter", 
                   "singletype", "arraytype", "funcdeclaration", "procdeclaration", 
                   "statementpart", "assignstatement", "ifstatement", "whilestatement", 
                   "forstatement", "breakstatement", "continuestatement", 
                   "returnstatement", "compoundstatement", "withstatement", 
                   "callstatement", "expressions", "exp0", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "exp6", "operand", "funccall", 
                   "arrayindex" ]

    EOF = Token.EOF
    VAR=1
    BREAK=2
    CONTINUE=3
    FOR=4
    WITH=5
    TO=6
    DOWNTO=7
    DO=8
    IF=9
    THEN=10
    ELSE=11
    RETURN=12
    WHILE=13
    BEGIN=14
    END=15
    FUNCTION=16
    PROCEDURE=17
    ARRAY=18
    OF=19
    REALTYPE=20
    BOOLTYPE=21
    INTTYPE=22
    STRINGTYPE=23
    ASSIGN=24
    ADDOP=25
    SUBOP=26
    MULOP=27
    SDIVOP=28
    DIVOP=29
    MODOP=30
    NOTOP=31
    OROP=32
    ANDOP=33
    NOTEQUALOP=34
    EQUALOP=35
    LESSOP=36
    GREATEROP=37
    LEOREQUOP=38
    GROREQUOP=39
    LB=40
    RB=41
    LP=42
    RP=43
    LSB=44
    RSB=45
    COLON=46
    SEMI=47
    DDOT=48
    COMMA=49
    WS=50
    ID=51
    INTLIT=52
    REALLIT=53
    STRINGLIT=54
    BOOLLIT=55
    TRADITIONALblockCOMMENT=56
    BLOCKCOMMENT=57
    LINECOMMENT=58
    UNCLOSE_STRING=59
    ILLEGAL_ESCAPE=60
    ERROR_CHAR=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def funcdeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.FuncdeclarationContext)
            else:
                return self.getTypedRuleContext(MPParser.FuncdeclarationContext,i)


        def vardeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VardeclarationContext)
            else:
                return self.getTypedRuleContext(MPParser.VardeclarationContext,i)


        def procdeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ProcdeclarationContext)
            else:
                return self.getTypedRuleContext(MPParser.ProcdeclarationContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 63
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MPParser.FUNCTION]:
                    self.state = 60
                    self.funcdeclaration()
                    pass
                elif token in [MPParser.VAR]:
                    self.state = 61
                    self.vardeclaration()
                    pass
                elif token in [MPParser.PROCEDURE]:
                    self.state = 62
                    self.procdeclaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.VAR) | (1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE))) != 0)):
                    break

            self.state = 67
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def vardeclarationlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VardeclarationlistContext)
            else:
                return self.getTypedRuleContext(MPParser.VardeclarationlistContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_vardeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardeclaration" ):
                listener.enterVardeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardeclaration" ):
                listener.exitVardeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardeclaration" ):
                return visitor.visitVardeclaration(self)
            else:
                return visitor.visitChildren(self)




    def vardeclaration(self):

        localctx = MPParser.VardeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vardeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(MPParser.VAR)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.vardeclarationlist()
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardeclarationlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self):
            return self.getTypedRuleContext(MPParser.ParameterContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def getRuleIndex(self):
            return MPParser.RULE_vardeclarationlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardeclarationlist" ):
                listener.enterVardeclarationlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardeclarationlist" ):
                listener.exitVardeclarationlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardeclarationlist" ):
                return visitor.visitVardeclarationlist(self)
            else:
                return visitor.visitChildren(self)




    def vardeclarationlist(self):

        localctx = MPParser.VardeclarationlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardeclarationlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.parameter()
            self.state = 76
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def arraytype(self):
            return self.getTypedRuleContext(MPParser.ArraytypeContext,0)


        def singletype(self):
            return self.getTypedRuleContext(MPParser.SingletypeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = MPParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(MPParser.ID)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 79
                self.match(MPParser.COMMA)
                self.state = 80
                self.match(MPParser.ID)
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(MPParser.COLON)
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.ARRAY]:
                self.state = 87
                self.arraytype()
                pass
            elif token in [MPParser.REALTYPE, MPParser.BOOLTYPE, MPParser.INTTYPE, MPParser.STRINGTYPE]:
                self.state = 88
                self.singletype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SingletypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLTYPE(self):
            return self.getToken(MPParser.BOOLTYPE, 0)

        def REALTYPE(self):
            return self.getToken(MPParser.REALTYPE, 0)

        def INTTYPE(self):
            return self.getToken(MPParser.INTTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MPParser.STRINGTYPE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_singletype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingletype" ):
                listener.enterSingletype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingletype" ):
                listener.exitSingletype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingletype" ):
                return visitor.visitSingletype(self)
            else:
                return visitor.visitChildren(self)




    def singletype(self):

        localctx = MPParser.SingletypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_singletype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REALTYPE) | (1 << MPParser.BOOLTYPE) | (1 << MPParser.INTTYPE) | (1 << MPParser.STRINGTYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArraytypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.INTLIT)
            else:
                return self.getToken(MPParser.INTLIT, i)

        def DDOT(self):
            return self.getToken(MPParser.DDOT, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def singletype(self):
            return self.getTypedRuleContext(MPParser.SingletypeContext,0)


        def SUBOP(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SUBOP)
            else:
                return self.getToken(MPParser.SUBOP, i)

        def getRuleIndex(self):
            return MPParser.RULE_arraytype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArraytype" ):
                listener.enterArraytype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArraytype" ):
                listener.exitArraytype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraytype" ):
                return visitor.visitArraytype(self)
            else:
                return visitor.visitChildren(self)




    def arraytype(self):

        localctx = MPParser.ArraytypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arraytype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(MPParser.ARRAY)
            self.state = 94
            self.match(MPParser.LSB)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 95
                self.match(MPParser.SUBOP)


            self.state = 98
            self.match(MPParser.INTLIT)
            self.state = 99
            self.match(MPParser.DDOT)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 100
                self.match(MPParser.SUBOP)


            self.state = 103
            self.match(MPParser.INTLIT)
            self.state = 104
            self.match(MPParser.RSB)
            self.state = 105
            self.match(MPParser.OF)
            self.state = 106
            self.singletype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def compoundstatement(self):
            return self.getTypedRuleContext(MPParser.CompoundstatementContext,0)


        def singletype(self):
            return self.getTypedRuleContext(MPParser.SingletypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MPParser.ArraytypeContext,0)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ParameterContext)
            else:
                return self.getTypedRuleContext(MPParser.ParameterContext,i)


        def vardeclaration(self):
            return self.getTypedRuleContext(MPParser.VardeclarationContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_funcdeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdeclaration" ):
                listener.enterFuncdeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdeclaration" ):
                listener.exitFuncdeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdeclaration" ):
                return visitor.visitFuncdeclaration(self)
            else:
                return visitor.visitChildren(self)




    def funcdeclaration(self):

        localctx = MPParser.FuncdeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(MPParser.FUNCTION)
            self.state = 109
            self.match(MPParser.ID)
            self.state = 110
            self.match(MPParser.LB)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 111
                self.parameter()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MPParser.SEMI:
                    self.state = 112
                    self.match(MPParser.SEMI)
                    self.state = 113
                    self.parameter()
                    self.state = 118
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 121
            self.match(MPParser.RB)
            self.state = 122
            self.match(MPParser.COLON)
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REALTYPE, MPParser.BOOLTYPE, MPParser.INTTYPE, MPParser.STRINGTYPE]:
                self.state = 123
                self.singletype()
                pass
            elif token in [MPParser.ARRAY]:
                self.state = 124
                self.arraytype()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 127
            self.match(MPParser.SEMI)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 128
                self.vardeclaration()


            self.state = 131
            self.compoundstatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcdeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def compoundstatement(self):
            return self.getTypedRuleContext(MPParser.CompoundstatementContext,0)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ParameterContext)
            else:
                return self.getTypedRuleContext(MPParser.ParameterContext,i)


        def vardeclaration(self):
            return self.getTypedRuleContext(MPParser.VardeclarationContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_procdeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcdeclaration" ):
                listener.enterProcdeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcdeclaration" ):
                listener.exitProcdeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcdeclaration" ):
                return visitor.visitProcdeclaration(self)
            else:
                return visitor.visitChildren(self)




    def procdeclaration(self):

        localctx = MPParser.ProcdeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_procdeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(MPParser.PROCEDURE)
            self.state = 134
            self.match(MPParser.ID)
            self.state = 135
            self.match(MPParser.LB)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 136
                self.parameter()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MPParser.SEMI:
                    self.state = 137
                    self.match(MPParser.SEMI)
                    self.state = 138
                    self.parameter()
                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 146
            self.match(MPParser.RB)
            self.state = 147
            self.match(MPParser.SEMI)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 148
                self.vardeclaration()


            self.state = 151
            self.compoundstatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementpartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignstatement(self):
            return self.getTypedRuleContext(MPParser.AssignstatementContext,0)


        def ifstatement(self):
            return self.getTypedRuleContext(MPParser.IfstatementContext,0)


        def whilestatement(self):
            return self.getTypedRuleContext(MPParser.WhilestatementContext,0)


        def forstatement(self):
            return self.getTypedRuleContext(MPParser.ForstatementContext,0)


        def breakstatement(self):
            return self.getTypedRuleContext(MPParser.BreakstatementContext,0)


        def continuestatement(self):
            return self.getTypedRuleContext(MPParser.ContinuestatementContext,0)


        def returnstatement(self):
            return self.getTypedRuleContext(MPParser.ReturnstatementContext,0)


        def compoundstatement(self):
            return self.getTypedRuleContext(MPParser.CompoundstatementContext,0)


        def withstatement(self):
            return self.getTypedRuleContext(MPParser.WithstatementContext,0)


        def callstatement(self):
            return self.getTypedRuleContext(MPParser.CallstatementContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_statementpart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementpart" ):
                listener.enterStatementpart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementpart" ):
                listener.exitStatementpart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementpart" ):
                return visitor.visitStatementpart(self)
            else:
                return visitor.visitChildren(self)




    def statementpart(self):
